# Codelab

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
addons/elemental_powers/: README.md
addons/elemental_powers/behavior_pack/: manifest.json
addons/elemental_powers/behavior_pack/items/: air_orb.json  air_staff.json  card_bastion.json  card_climax.json  card_conduit.json  card_plunge.json  card_primary.json  card_root.json  card_skyfall.json  card_slipstream.json  dark_orb.json  dark_scythe.json  dark_staff.json  earth_orb.json  earth_staff.json  fire_orb.json  fire_staff.json  gui_tool.json  light_orb.json  light_staff.json  lightning_orb.json  lightning_staff.json  water_orb.json  water_staff.json
addons/elemental_powers/resource_pack/: manifest.json
addons/elemental_powers/tools/: generate_cards.py  generate_items.py  generate_particles.py  generate_textures.py  package.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
b200-emu/: .gitignore  LICENSE  README.md  pyproject.toml
b200-emu/.github/workflows/: ci.yml
b200-emu/b200_emu/: __init__.py  backend.py  cli.py  device.py  kernel.py  memory.py  nn.py  ops.py  sm.py  specs.py  tensor_core.py
b200-emu/examples/: gemm_bench.py  train_mlp.py  vector_add.py
b200-emu/tests/: test_backend.py  test_cli.py  test_kernel.py  test_memory.py  test_specs.py  test_tensor_core.py  test_training.py
minecraft-airport-world/: .gitignore  Airport.mcworld  README.md  build_airport.js  package.json
minecraft-avatar-scanner/: AvatarScanner.mcworld  README.md  generate_world.py
(+32 files in other folders)
