[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b200-emu"
version = "0.1.0"
description = "Architecturally-faithful software emulator of an NVIDIA Blackwell B200-class GPU."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "b200-emu contributors" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
b200-smi = "b200_emu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["b200_emu*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
